Added secrets handling
